some final changes

--- a/compilation.tex
+++ b/compilation.tex
@@ -2,7 +2,7 @@
 \begin{figure*}[t]
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/pdf/figure-03}
-	\caption{Location of events considered in the compiled seismic catalog \myrevision{for the complete region of interest}. (a) Historical seismicity prior to 1900 for $M_w \geq 4$ \citep[after][]{Zare2014}. (b) Instrumental seismicity up until December 2015 for $M_w \geq 3$ (IIEES) and $M_w \geq 4$ \citep[after][]{Zare2014}. Size of symbols is proportional to the magnitude of the events. In the case of the historical seismicity catalog, the color fill indicates the year of the event. The borderlines of the seismic zones shown in Fig.~\ref{fig:iran} are shown in the background in white, along with the light gray shaded relief \myrevision{in the background. The dashed box indicates the effective region of interest}.}
+	\caption{Location of events considered in the compiled seismic catalog \myrevision{for the complete region of interest}. (a) Historical seismicity prior to 1900 for $M_w \geq 4$ \citep[after][]{Zare2014}. (b) Instrumental seismicity up until December 2015 for $M_w \geq 3$ (IIEES) and $M_w \geq 4$ \citep[after][]{Zare2014}. Size of symbols is proportional to the magnitude of the events. In the case of the historical seismicity catalog, the color fill indicates the year of the event. The borders of the seismic zones shown in Fig.~\ref{fig:iran} are shown in the background in thin white lines, along with the light-gray shaded relief \myrevision{in the background. The dashed box indicates the effective region of interest}.}
 	\label{fig:catalog}
 \end{figure*}
 
