--- a/references.bib
+++ b/references.bib
@@ -928,6 +928,14 @@
   Year                     = {2010}
 }
 
+@Book{Petersen2008,
+
+  Title                    = {Documentation for the 2008 {U}pdate of the {U}nited {S}tates {N}ational {S}eismic {H}azard {M}aps},
+  Author                   = {Petersen, Mark D and Frankel, Arthur D and Harmsen, Stephen C and Mueller, Charles S and Haller, Kathleen M and Wheeler, Russell L and Wesson, Robert L and Zeng, Yuehua and Boyd, Oliver S and Perkins, David M and Luco, Nicolas and Field, Edward H and Wills, Chris J and Rukstales, Kenneth S },
+  Publisher                = {US Geological Survey},
+  Year                     = {2008}
+}
+
 @Article{Petersen2015,
   Title                    = {The 2014 {United States} National Seismic Hazard Model},
   Author                   = {Mark D. Petersen and Morgan P. Moschetti and Peter M. Powers and Charles S. Mueller and Kathleen M. Haller and Arthur D. Frankel and Yuehua Zeng and Sanaz Rezaeian and Stephen C. Harmsen and Oliver S. Boyd and Ned Field and Rui Chen and Kenneth S. Rukstales and Nico Luco and Russell L. Wheeler and Robert A. Williams and Anna H. Olsen},
@@ -1237,4 +1245,3 @@
 }
 
 @comment{jabref-meta: databaseType:biblatex;}
-
