--- a/results.tex
+++ b/results.tex
@@ -46,9 +46,9 @@ Overall, these results are consistent with the seismicity observed in Fig.~\ref{
 
 \myrevision{The combined (R,U) model reflects the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as that of the major faults shown in Fig.~\ref{fig:selected}a, but it also reflects the influence that small earthquakes have on the seismicity hazard of the region}. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the North Alborz fault in the Alborz region and that of the different faults in the Kopeh Dagh region. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2 model results, where the expected accelerations are of the order of 1.0 g to the northwest of \myrevision{the} city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
 
-\myrevision{We also note that the overall distribution of mean PGA agrees with the recent study by \citet{Khodaverdian_2016_BSSA}. However, their results are in general slightly lower than ours. Obviously, given the differences in the catalogs, completeness magnitude, and in the seismicity parameters $M_{\max}$ and $b$, we cannot expect PGA values to match. For example, in the case of the $b$ values, \citet{Khodaverdian_2016_BSSA} reported large variations netween 0.56 and 1.27, where over 50 percent of the grid points had $b$ values greater than 1; whereas in our study the $b$ values observe a narrow range of variation between 0.93 and 1.15. In this regard we should note that \citet{Khodaverdian_2016_BSSA} computed the seismicity parameters for each grid point considering the contributions within a circular area of radius 200 m, whereas we considered a uniform seismicity parameters for each region and account for the uncertainty in the difference between regions via the combination of the R and U models.}
+\myrevision{We also note that the overall distribution of mean PGA agrees with the recent study by \citet{Khodaverdian_2016_BSSA}. However, their results are in general slightly lower than ours. Obviously, given the differences in the catalogs, completeness magnitude, and in the seismicity parameters $M_{\max}$ and $b$, we cannot expect PGA values to match. For example, in the case of the $b$ values, \citet{Khodaverdian_2016_BSSA} reported large variations between 0.56 and 1.27, where over 50 percent of the grid points had $b$ values greater than 1; whereas in our study the $b$ values observe a narrow range of variation between 0.93 and 1.15. In this regard we should note that \citet{Khodaverdian_2016_BSSA} computed the seismicity parameters for each grid point considering the contributions within a circular area of radius 200 m, whereas we considered a uniform seismicity parameters for each region and account for the uncertainty in the difference between regions via the combination of the R and U models.}
 
-\myrevision{Altogether, on average, we found our results to be in good agreement with other previous results. For the city of Uremia, for instance, we obtained a expected PGA of 0.24 g, which is slightly lower than values obtained by \citet{BHRC2014} and \citet{Zare2012} and higher than \citet{Khodaverdian_2016_BSSA} for a 10 percent probability of exceedance in 50 years. We believe \citet{Zare2012} obtained higher values because their of use of a parametric method. For a 2 percent probability of exceedance in 50 years, \citet{Golara2014} obtained expected PGAs on the order of 0.3--0.5 g, where our mean value is 0.38 g. For the city of Tabriz, our results match with those obtained by \citet{BHRC2014} and are within the range of values computed by \citet{Zare2012}, for a 10 percent probability. These and other similar comparisons are summarized in Table \ref{tab:pga}, where we show our results and those of other previous studies for selected cities in northern Iran.}
+\myrevision{Altogether, on average, we found our results to be in good agreement with other previous results. For the city of Urmia, for instance, we obtained a expected PGA of 0.24 g, which is slightly lower than values obtained by \citet{BHRC2014} and \citet{Zare2012} and higher than \citet{Khodaverdian_2016_BSSA} for a 10 percent probability of exceedance in 50 years. We believe \citet{Zare2012} obtained higher values because their of use of a parametric method. For a 2 percent probability of exceedance in 50 years, \citet{Golara2014} obtained expected PGAs on the order of 0.3--0.5 g, where our mean value is 0.38 g. For the city of Tabriz, our results match with those obtained by \citet{BHRC2014} and are within the range of values computed by \citet{Zare2012}, for a 10 percent probability. These and other similar comparisons are summarized in Table \ref{tab:pga}, where we show our results and those of other previous studies for selected cities in northern Iran.}
 
 \myrevision{As mentioned before, overall, our results are close to or within the ranges provided by most previous studies}. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher than the rest. \myrevision{One possible explanation for the higher values in \citet{Golara2014} is their use of the maximum credible earthquake as the value for $M_{\max}$. The maximum credible earthquake is the largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, based on geologic and seismic data. Therefore, it is often higher than historical documented observations or instrumental data-driven estimations of $M_{\max}$}.
 
